[gd_scene load_steps=3 format=3 uid="uid://c3avisjq5mnod"]

[ext_resource type="Script" uid="uid://cjo4xw1iwuawt" path="res://menu/from_fen.gd" id="1_agigj"]

[sub_resource type="GDScript" id="GDScript_agigj"]
script/source = "extends TextEdit

var a = get_text();
"

[node name="FromFen" type="Node2D"]
script = ExtResource("1_agigj")

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_right = 800.0
offset_bottom = 800.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="FenInput" type="TextEdit" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
placeholder_text = "Enter FEN string"
script = SubResource("GDScript_agigj")

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="BackButton2" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="CenterContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BackButton2" to="." method="_on_back_button_2_pressed"]
